examples/test/testpolicy3167.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3167
  namespace: namespace285
spec:
  podSelector:
    matchLabels:
      key23: value10
      key7: value39
      key22: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value7
          key31: value43
      podSelector:
        matchLabels:
          key47: value23
